--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-  color: white;
+  color: #f7f7f7;
 }
 
 .form,
@@ -41,23 +41,27 @@ body {
 
 .bgImage {
   position: absolute;
+  object-fit: cover;
+
   top: 0px;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
-  filter: grayscale(20%);
-  object-fit: cover;
+
+  filter: blur(40px);
+  filter: brightness(0.5);
 }
 
 .js-clock {
-  color: white;
+  color: #f7f7f7;
   font-size: 168px;
   font-weight: 500;
+  font-family: Noto Sans KR;
 }
 
 .greetings {
-  color: white;
+  color: #f7f7f7;
   font-size: 40px;
   font-weight: 13px;
   object-fit: cover;
@@ -67,8 +71,29 @@ body {
   position: absolute;
   top: 10%;
   left: 30%;
-  color: white;
+  color: #f7f7f7;
   font-size: 15px;
   text-align: left;
   margin-bottom: 10px;
+  font-style: initial;
+}
+
+.js-input {
+  margin: 18px 0;
+  width: 300px;
+  height: 30px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  text-align: center;
+  color: #2a2a2a;
+  font-size: 18px;
+}
+
+.js-toDoList {
+  text-decoration: none;
+  text-align: center;
+  color: ##f4f4f4;
+  font-size: 25px;
 }
